Bug 161573 - open recent files: files that don't exist now display two error messages (Linux)
Summary: open recent files: files that don't exist now display two error messages (Linux)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
24.2.0.0 alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2024-06-14 13:33 UTC by Justin L
Modified: 2024-06-17 09:18 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2024-06-14 13:33:01 UTC
The start center lists recently opened files (some of which may no longer exist at that location any more). Starting in LO 24.2, if I try to open one of these non-existent files, my Ubuntu/gtk3 machine duplicates the error dialog. Both dialogs display the same message "~/Downloads/filename.docx does not exist."

The dialog also duplicates with SAL_USE_VCLPLUGIN=gen instdir/program/soffice.

This started with LO 24.2 commit 86c682273d907c77404637c89e584047de1c1099
Author: Mike Kaganski on Sun Nov 26 20:18:34 2023 +0300
    tdf#96401: allow to detect a broken ZIP package

[Note: earlier in 24.2 there was no error message at all, due to Noel's commit e3c961e6a3917d95534652e0f982918cc1079015 which was soon reverted.]
Comment 1 Mike Kaganski 2024-06-14 14:05:17 UTC
https://gerrit.libreoffice.org/c/core/+/168869
Comment 2 Justin L 2024-06-14 14:27:23 UTC
The start center specifically is irrelevant. The same is seen for file - recent documents (or even file - open - if the pre-selected file is then removed).
Comment 3 Commit Notification 2024-06-14 19:01:26 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/278008f76835a128025b2a37ba8c9a7613284b6d

tdf#161573: Do not show unrelated messages during broken ZIP detection

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-06-14 21:09:54 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/0612048edb676d2c4f2e7dbefa0fcb464c25f016

tdf#161573: Do not show unrelated messages during broken ZIP detection

It will be available in 24.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-06-17 09:18:49 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/fc77f9a257a0d5f1755689aa8fd3561d82ffe67b

tdf#161573: Do not show unrelated messages during broken ZIP detection

It will be available in 24.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.