tdf#161573: Do not show unrelated messages during broken ZIP detection

Change-Id: Iab7f4bb492e24eb2ca6448f3540d219a18c15d79
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/168869
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>