filter/source/config/cache/typedetection.cxx
@@ -926,6 +926,12 @@ OUString TypeDetection::impl_detectTypeFlatAndDeep(      utl::MediaDescriptor& r
     {
         try
         {
+            // tdf#161573: do not interact with the user about possible unrelated failures (e.g.,
+            // missing file). If needed, that will happen later, in the main detection phase.
+            auto aInteraction(rDescriptor.getValue(utl::MediaDescriptor::PROP_INTERACTIONHANDLER));
+            rDescriptor.erase(utl::MediaDescriptor::PROP_INTERACTIONHANDLER);
+            comphelper::ScopeGuard interactionHelperGuard([&rDescriptor, &aInteraction]
+                { rDescriptor[utl::MediaDescriptor::PROP_INTERACTIONHANDLER] = aInteraction; });
             impl_openStream(rDescriptor);
             if (auto xStream = rDescriptor.getUnpackedValueOrDefault(
                     utl::MediaDescriptor::PROP_INPUTSTREAM,
@@ -943,7 +949,7 @@ OUString TypeDetection::impl_detectTypeFlatAndDeep(      utl::MediaDescriptor& r
                 if (isBrokenZIP(xStream, xContext))
                 {
                     if (css::uno::Reference<css::task::XInteractionHandler> xInteraction{
-                            rDescriptor.getValue(utl::MediaDescriptor::PROP_INTERACTIONHANDLER),
+                            aInteraction,
                             css::uno::UNO_QUERY })
                     {
                         INetURLObject aURL(rDescriptor.getUnpackedValueOrDefault(
